# abi-break-demo

./: .gitignore  CMakeLists.txt  README.md
includes/: simple_string.h  util.h
src/: abi_break.cpp  no_abi_break.cpp  simple_string.cpp  util.cpp
